----------------------------------------------------------------------------
Centric CRM 4.1 beta
Copyright (C) 2006 Dark Horse Ventures, LLC
Change Log
June 1, 2006
----------------------------------------------------------------------------

** New Installs **

The Centric CRM Group edition can be used to install PostgreSQL, MS SQL
from the web-based installer.
(NOTE: DaffodilDB has not been updated yet)

The Centric CRM Source Code edition can be used to install PostgreSQL, MS SQL,
DaffodilDB, Firebird DB, and Oracle DB from the command-line installer.
(NOTE: Only PostgreSQL and MS SQL have been updated!)


** Upgrading **

This version can be used to upgrade PostgreSQL and MS SQL installations from
Centric CRM 3.1 or 4.0 (Group and Source editions) to Centric CRM 4.1.
DaffodilDB, Oracle, and Firebird have not been finalized for upgrading.
If upgrading from a version prior to 3.1, you will need to upgrade to 3.1 first.

New features:
- Web site module and portal

Enhancements:
- Upgraded TinyMCE HTML Editor to 2.0.6.1


----------------------------------------------------------------------------
Centric CRM 4.0.1
Copyright (C) 2006 Dark Horse Ventures, LLC
Change Log
June 1, 2006
----------------------------------------------------------------------------

This is a maintenance release to address issues reported since 4.0.

This release includes the following additions:
- Australian states/territories have been added
- Brazilian states/territories have been added

This release includes the following fixes:
- When using a default country that does not have corresponding "States"
  the address state drop-down would default to a drop-down list with the
  option being "-- None --"; this now defaults to a text field as intended
- Currency locale entries with spaces between numbers did not work correctly
- An error was reported when trying to access an email that was not sent or
  received by the current user